--- a/web/src/assets/scss/layout/_page-layout.scss
+++ b/web/src/assets/scss/layout/_page-layout.scss
@@ -14,4 +14,16 @@
    padding: 22px 30px;
    z-index: 10;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+
+   .rightbar{
+       display: flex;
+       justify-content: space-evenly;
+       align-items: middle;
+
+    
+   }
+}
+
+.svg-inline--fa fa-question-circle fa-w-16 {
+    font-size: 18px;
 }
