--- a/web/src/assets/scss/app.scss
+++ b/web/src/assets/scss/app.scss
@@ -10,6 +10,7 @@
 @import "layout/page-layout";
 @import "components/card";
 @import "components/map";
+@import "components/button";
 
 
 /**** themes ****/
