--- a/web/src/assets/scss/components/_card.scss
+++ b/web/src/assets/scss/components/_card.scss
@@ -38,6 +38,10 @@
 
 .input-div {
    position: relative;
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   align-items: center;
 
     label{
         padding: 0 10px;
