--- a/web/src/assets/scss/layout/_page-layout.scss
+++ b/web/src/assets/scss/layout/_page-layout.scss
@@ -15,25 +15,29 @@
   z-index: 10;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
-.header{
-   width: 100%;
-   position: fixed;
-   top:0;
-   left:0;
-   background-color: #fff;
-   padding: 22px 30px;
-   z-index: 10;
-   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+.header {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+  padding: 22px 30px;
+  z-index: 10;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 
-   .rightbar{
-       display: flex;
-       justify-content: space-evenly;
-       align-items: middle;
-
-    
-   }
+  .rightbar {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: middle;
+  }
 }
 
 .svg-inline--fa fa-question-circle fa-w-16 {
-    font-size: 18px;
+  font-size: 18px;
+}
+
+@media only screen and (max-width: 655px) {
+  .rightbar {
+    margin-top: 0.5em;
+  }
 }
