--- a/web/src/assets/scss/utils/_variables.scss
+++ b/web/src/assets/scss/utils/_variables.scss
@@ -5,3 +5,9 @@
 $primary-color: #3F51B5;
 $secondary-color: #f73164;
 $info-color : #7366ff;
+
+
+//dark layout variables
+$dark-body-background: #1d1e26;
+$dark-card-background: #262932;
+$dark-small-font-color: #98a6ad;
