--- a/web/src/assets/scss/components/usercount.scss
+++ b/web/src/assets/scss/components/usercount.scss
@@ -1,30 +1,33 @@
 .container_ {
-  display: inline-block;
-  width: 120px;
-  height: 100px;
-  margin: 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 180px;
+  height: 180px;
+  margin: 3rem;
   border-radius: 12px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em,
     rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,
     rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
 }
 .sign {
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 700;
   margin: 0;
   padding: 0;
 }
 .name {
-  font-size: 12px;
+  font-size: 14px;
   margin: 0;
   padding: 0;
-  margin-top: 6px;
+  margin-top: 4px;
   font-weight: 600;
   text-align: center;
   color: #f21170;
 }
 .percentage {
-  font-size: 45px;
+  font-size: 50px;
   margin: 0;
   padding: 0;
   margin: 0;
