--- a/web/src/assets/scss/layout/_page-layout.scss
+++ b/web/src/assets/scss/layout/_page-layout.scss
@@ -1,20 +1,26 @@
 .wrapper {
   padding: 22px 30px;
 }
-.page-body {
-  min-height: calc(100vh - 80px);
-  margin-top: 80px;
+
+.page {
+  transition: all 0.3s ease-in;
+
+
+  &.sidebar-close, & .header{
+    margin-left: 80px;
+  }
+  &.sidebar-open, & .header{
+    margin-left: 250px ;
+  }
+
+  &-body {
+    min-height: calc(100vh - 80px);
+    margin-top: 80px;
+  }
+
 }
-.header {
-  width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: #fff;
-  padding: 22px 30px;
-  z-index: 10;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-}
+
+
 .header{
    width: 100%;
    position: fixed;
@@ -30,10 +36,7 @@
        justify-content: space-evenly;
        align-items: middle;
 
-    
    }
 }
 
-.svg-inline--fa fa-question-circle fa-w-16 {
-    font-size: 18px;
-}
+
