--- a/web/src/assets/scss/layout/_page-layout.scss
+++ b/web/src/assets/scss/layout/_page-layout.scss
@@ -6,10 +6,10 @@
   transition: all 0.3s ease-in;
 
 
-  &.sidebar-close, & .header{
+ &.sidebar-close,  .header.sidebar-close{
     margin-left: 80px;
   }
-  &.sidebar-open, & .header{
+  &.sidebar-open, .header.sidebar-open{
     margin-left: 250px ;
   }
 
@@ -28,6 +28,12 @@
   padding: 22px 30px;
   z-index: 10;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease-in-out;
+  .row{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 
   .rightbar {
     display: flex;
