--- a/web/src/assets/scss/utils/_variables.scss
+++ b/web/src/assets/scss/utils/_variables.scss
@@ -11,3 +11,4 @@ $info-color : #7366ff;
 $dark-body-background: #1d1e26;
 $dark-card-background: #262932;
 $dark-small-font-color: #98a6ad;
+$dark-font-color:rgba(255, 255, 255, 0.7);
