--- a/web/src/assets/scss/components/_map.scss
+++ b/web/src/assets/scss/components/_map.scss
@@ -1,68 +1,38 @@
-// .map-container{
-//     width: 100%;
-//     height: 400px;
-
-//     .mapboxgl-ctrl-attrib-inner{
-//         display: none;
-//     }
-// }
-
-// .map {
-//   height: 500px;
-
-//   .leaflet-container {
-//     height: 100%;
-//     z-index: 0;
-//   }
-// }
 
 .map-container {
+  .mapboxgl-canvas{
+    width: 100%;
+  }
   height: 500px;
+
   }
 
 .mapboxgl-popup-content{
-.stops.info{
+  width: 270px;
+.stops-info{
   width: 250px;
-
-  image{
+  img{
    max-width: 100%;
   }
 }
 }
 
-.e-marker {
-  transform-origin: bottom center;
+
+.map {
+  height: 500px;
+
+  .leaflet-container {
+    height: 100%;
+  }
+}
+
+.marker {
+  background-color: red;
+  background-size: cover;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
   cursor: pointer;
-  
-  &__marker {
-    fill: #fff;
-  }
-  
-  &__icon {
-    fill: #fff;
-  }
-  
-  &__image {
-    transform: scale(0);
-    transform-origin: 50% 50%;
-  }
-  
-  &__circle {
-    display: none;
-  }
-  
-  &__text {
-    font-size: 12px;
-    font-family: brandon-grotesque, sans-serif;
-    text-align: center;
-    opacity: 0;
-    color: #fff;
-    fill: #fff;
-    transform-origin: 50% 50%;
-    // Center SVG text
-    alignment-baseline: middle;
-    text-anchor: middle;
-  }  
 }
 
 
