--- a/web/src/assets/scss/components/_sidebar.scss
+++ b/web/src/assets/scss/components/_sidebar.scss
@@ -1,123 +1,112 @@
 #sidebar {
-    position: fixed;
-    z-index: 10;
-    top: 0;
-    left: 0;
-    width: 250px;
-    height: auto;
-    transition: 0.3s;
-    // -webkit-box-shadow: 0 0 21px 0 rgba(89 ,102 ,122 , 0.1);
-    // box-shadow: 0 0 21px 0 rgba(89 ,102, 122 , 0.1);
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  width: 250px;
+  height: auto;
+  transition: 0.3s;
+  -webkit-box-shadow: 0 0 21px 0 rgba(89, 102, 122, 0.1);
+  box-shadow: 0 0 21px 0 rgba(89, 102, 122, 0.1);
 
-    .menu-icon{
-        margin-right: 10px;
-        cursor: pointer;
-      
+  .menu-icon {
+    margin-right: 10px;
+    cursor: pointer;
+  }
+
+  .pro-sidebar-header {
+    padding: 20px;
+
+    .logotext h4 {
+      margin-bottom: 0;
+      color: #000;
     }
 
-    .pro-sidebar-header{
-     padding: 27px 30px;
-    -webkit-box-shadow: -9px 0 20px rgba(89 ,102 ,122 , 0.1);
-    box-shadow: -9px 0 20px rgba(89 ,102 ,122 , 0.1);
-  
+    .closemenu {
+      position: absolute;
+      z-index: 100;
+      color: $primary-color;
+      top: 22px;
+      right: 20px;
 
-   .logotext h4 {
-        margin-bottom:0;
-        color: #000;
-     
-      }
+      cursor: pointer;
+    }
+  }
 
-      .closemenu{
-       position : absolute;
-       z-index:100;
-       color: $primary-color;
-       top:28px;
-       right: 20px;
-       cursor: pointer;
-      }
+  .pro-menu-item {
+    transform: translateY(0);
+    transition: all 0.3s ease-in-out;
+
+    &:hover .pro-inner-item {
+      color: $primary-color;
+      transform: translateY(1px);
+    }
+  }
+
+  .pro-sidebar {
+    width: 100%;
+    min-width: 100%;
+    height: 100vh;
+
+    &.collapsed {
+      width: 80px;
+      min-width: 80px;
     }
 
-
-    .pro-menu-item{
-      transform: translateY(0);
-      transition: all 0.3s ease-in-out;
-
-      &:hover .pro-inner-item{
-        color: $primary-color;
-        transform: translateY(1px);
-        
-      }
+    & .pro-menu .pro-menu-item > .pro-inner-item {
+      padding: 8px 10px;
+      margin: 10px 0;
     }
 
+    & .pro-menu .pro-menu-item > .pro-inner-item > .pro-item-content {
+      padding-top: 1px;
+      padding-right: 30px;
+    }
 
-    .pro-sidebar {
-      width: 100%;
-      min-width: 100%;
-      height: 100vh;
+    .pro-sidebar-inner .pro-sidebar-layout .active {
+      background-color: rgba($primary-color, 0.2);
+      color: $primary-color !important;
+      transition: all 0.5s ease;
+      border-radius: 10px;
+    }
 
-      &.collapsed {
-        width: 80px;
-        min-width: 80px;
-      }
+    &-inner .pro-sidebar-layout ul .pro-menu-item {
+      color: #2c323f;
+      // margin: 10px 0px;
+      font-weight: bold;
+      margin-top: 1rem;
+      // padding: 10px;
+    }
 
-      & .pro-menu .pro-menu-item > .pro-inner-item{
-        padding: 8px 20px;
-        margin: 10px 0;
-      }
-      
-      .pro-sidebar-inner .pro-sidebar-layout .active {
-        background-color: rgba($primary-color, 0.2);
-        color: $primary-color !important;
-        transition: all 0.5s ease;
-        border-radius: 10px;
-       }
+    .pro-menu {
+      padding: 20px 20px;
+    }
 
-       &-inner .pro-sidebar-layout ul .pro-menu-item{
-        color: #2c323f;
-       // margin: 10px 0px;
-        font-weight: bold;
-       // padding: 10px;
-      }
-      
-      .pro-menu{
-        padding: 15px 20px;
-      }
-     
-      &-inner {
-        background-color: white;
-        box-shadow: 0.5px 0.866px 2px 0px rgba(0, 0, 0, 0.15);
-        .pro-sidebar-layout  {
-          overflow-y: hidden;
+    &-inner {
+      background-color: white;
+      box-shadow: 0.5px 0.866px 2px 0px rgba(0, 0, 0, 0.15);
+      .pro-sidebar-layout {
+        overflow-y: hidden;
 
-          &.pro-sidebar-content{
-            padding:20px;
- 
-          }
-          // ul{
-          //   padding: 0 10px;
-          // }
+        &.pro-sidebar-content {
+          padding: 20px;
         }
+        // ul{
+        //   padding: 0 10px;
+        // }
       }
-
-     
-
-    }
-    
-  }
- 
-
-
-
-
-  // #sidebar .pro-sidebar-inner .pro-sidebar-layout ul .pro-inner-item .pro-icon-wrapper {
-  //   background-color: #fbf4cd;
-  //   color: #000;
-  //   border-radius: 3px;
-  // }
-
-  
-  @media only screen and (max-width: 720px) {
-    html {
-      overflow: hidden;
     }
   }
+}
+
+// #sidebar .pro-sidebar-inner .pro-sidebar-layout ul .pro-inner-item .pro-icon-wrapper {
+//   background-color: #fbf4cd;
+//   color: #000;
+//   border-radius: 3px;
+// }
+
+@media only screen and (max-width: 720px) {
+  html {
+    overflow: hidden;
+  }
+}
