--- a/web/src/assets/scss/components/_sidebar.scss
+++ b/web/src/assets/scss/components/_sidebar.scss
@@ -5,9 +5,11 @@
   left: 0;
   width: 250px;
   height: auto;
-  transition: 0.3s;
-  -webkit-box-shadow: 0 0 21px 0 rgba(89, 102, 122, 0.1);
-  box-shadow: 0 0 21px 0 rgba(89, 102, 122, 0.1);
+ // transition: all 0.5s ease-in-out
+ 
+  transition: all 0.3s ease-in-out;;
+  // -webkit-box-shadow: 0 0 21px 0 rgba(89, 102, 122, 0.1);
+  // box-shadow: 0 0 21px 0 rgba(89, 102, 122, 0.1);
 
   .menu-icon {
     margin-right: 10px;
@@ -27,7 +29,7 @@
       z-index: 100;
       color: $primary-color;
       top: 22px;
-      right: 20px;
+      right: 10px;
 
       cursor: pointer;
     }
@@ -47,10 +49,12 @@
     width: 100%;
     min-width: 100%;
     height: 100vh;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 
     &.collapsed {
       width: 80px;
       min-width: 80px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     }
 
     & .pro-menu .pro-menu-item > .pro-inner-item {
