--- a/web/src/assets/scss/themes/_dark.scss
+++ b/web/src/assets/scss/themes/_dark.scss
@@ -6,10 +6,28 @@ body {
 
         .header{
             background: $dark-card-background;
-        }
 
+            input{
+                background: inherit;
+            }
+        }
+  
+
+        #sidebar .pro-sidebar-layout{
+            background: $dark-card-background;
+           .menu-icon{ color: #fdfdfd; }
+
+        }
         .card {
             background: $dark-card-background;
         }
+
+        &.text-light{
+            color:#fdfdfd;;
+        }
+}
+
+.text-dark{
+    color: $dark-font-color;
 }
 }
